[package]
name = "utils-soeur"
version = "0.1.0"
edition = "2018"
authors = ["soeur <juzi201314@gmail.com>"]
description = "Just a library of practical tools for my own use"
license = "unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
